--- a/manifest.json
+++ b/manifest.json
@@ -7,16 +7,12 @@
         "48": "inject.png",
         "128": "inject.png"
     },
-    "content_scripts": 
-    [
-        {
-            "matches": ["<all_urls>"],
-            "js": ["js/inject.js"],
-            "run_at": "document_end"
-        }
-    ],
+    "browser_action": {
+        "default_icon": "inject.png",
+        "default_popup": "popup.html",
+        "default_title": "繁体->简体"
+     },
     "permissions": [ "tabs", "http://*/*", "https://*/*" ],
     "web_accessible_resources": ["js/jquery-3.4.1.min.js"],
     "version": "1.0"
  }
- 
